--- a/src/landing/landing.scss
+++ b/src/landing/landing.scss
@@ -16,7 +16,17 @@ body {
   background-color: #222;
   box-sizing: border-box;
   color: white;
+  display: flex;
+  flex-direction: column;
   height: 100%;
   padding: 2rem 4rem;
   width: 100%;
+}
+
+.response {
+  font-size: 1.5rem;
+}
+
+a {
+  color: #97E;
 }
