--- a/src/landing/landing.scss
+++ b/src/landing/landing.scss
@@ -1,12 +1,11 @@
+@use '../responsive';
+
 body {
   font-family: monospace;
-  height: 100vh;
   margin: 0;
-  width: 100vw;
 
   section {
     display: flex;
-    height: 100%;
     margin: 0;
     width: 100%;
   }
@@ -18,15 +17,39 @@ body {
   color: white;
   display: flex;
   flex-direction: column;
-  height: 100%;
-  padding: 2rem 4rem;
+  min-height: 100vh;
+  padding: 1rem 2rem;
   width: 100%;
+
+  @include responsive.lg {
+    padding: 2rem 4rem;
+  }
 }
 
 .response {
-  font-size: 1.5rem;
+  @include responsive.lg {
+    font-size: 1.5rem;
+  }
 }
 
 a {
   color: #97e;
+}
+
+.enter {
+  max-width: 75px;
+
+  @include responsive.lg {
+    max-width: 100px;
+    margin-left: 2rem;
+  }
+}
+
+.last-line {
+  display: flex;
+  flex-direction: column;
+
+  @include responsive.lg {
+    flex-direction: row;
+  }
 }
