--- a/src/about/about.scss
+++ b/src/about/about.scss
@@ -1,3 +1,5 @@
+@use '../responsive';
+
 main {
   display: block;
   height: 100vh;
@@ -6,6 +8,10 @@ main {
 .terminal-container {
   box-sizing: border-box;
   height: 100%;
-  margin-top: 10vh;
+  margin-top: 20vh;
   width: 100%;
+
+  @include responsive.lg {
+    margin-top: 10vh;
+  }
 }
