--- a/src/index.scss
+++ b/src/index.scss
@@ -1,17 +1,10 @@
 body {
-  background-color: #e8e2c9;
+  background: url('./overlay.png');
+  background-blend-mode: multiply;
+  background-color: #fffcf1;
   font-family: monospace;
   margin: 0;
   min-height: 100vh;
   max-height: 100vh;
   overflow: hidden;
-}
-
-.overlay {
-  position: absolute;
-  height: 100vh;
-  opacity: 0.5;
-  top: 0;
-  width: 100vw;
-  z-index: -1;
 }
