--- a/src/home/home.scss
+++ b/src/home/home.scss
@@ -17,9 +17,9 @@
     flex-direction: row;
   }
 
-  img  {
+  .profile  {
     border-radius: 50px;
-    height: 40vh;
+    height: 35vh;
 
     @include responsive.lg {
       height: 60vh;
@@ -28,9 +28,10 @@
 }
 
 .menu {
-  font-size: 3rem;
+  font-size: 2.5rem;
   margin: 0 100px;
   min-height: 50vh;
+  text-align: center;
 
   a {
     border-bottom: 2px solid transparent;
@@ -43,8 +44,12 @@
     }
   }
 
+  ul {
+    padding: 0;
+  }
+
   li {
     list-style: none;
-    margin: 3rem 0;
+    margin: 4rem 0;
   }
 }
