--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,14 @@
+@import url(https://fonts.googleapis.com/css2?family=Raleway);
+
+html {
+  font-size: 16px;
+}
+
 body {
   background: url('./overlay.png');
   background-blend-mode: multiply;
   background-color: #fffcf1;
-  font-family: monospace;
+  font-family: Raleway;
   margin: 0;
   min-height: 100vh;
   max-height: 100vh;
