--- a/src/projects/projects.scss
+++ b/src/projects/projects.scss
@@ -16,8 +16,9 @@
   align-items: center;
   border: 1px solid #666;
   display: flex;
-  justify-content: space-around;
-  padding: 2rem;
+  justify-content: space-between;
+  padding: 1rem;
+  padding-left: 10vw;
   position: relative;
   margin: 5vh;
 
@@ -37,6 +38,7 @@
   }
 
   &-text {
+    flex-grow: 1;
     opacity: 0;
     transform: translate(0, -10%);
   }
@@ -45,9 +47,10 @@
     float: right;
     width: 30%;
     opacity: 0;
+    margin: 1rem;
 
     @include responsive.lg {
-      width: 20%;
+      width: 25%;
     }
   }
 
