--- a/src/index.scss
+++ b/src/index.scss
@@ -11,6 +11,9 @@ body {
   font-family: Raleway;
   margin: 0;
   min-height: 100vh;
-  max-height: 100vh;
-  overflow: hidden;
+  overflow: auto;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
