--- a/src/home/home.scss
+++ b/src/home/home.scss
@@ -28,6 +28,13 @@
   }
 }
 
+.images {
+  align-items: flex-end;
+  display: flex;
+  flex-direction: column;
+  gap: -1rem;
+}
+
 .menu {
   font-size: 2.5rem;
   margin: 0 100px;
@@ -56,15 +63,6 @@
 }
 
 .drip {
-  bottom: 0;
-  height: 62vh;
-  position: absolute;
-  width: 80vw;
-  z-index: -1;
-
-  @include responsive.lg {
-    height: 19vh;
-    left: 25vw;
-    width: 20vw;
-  }
+  margin-top: -13px;
+  margin-right: -24px;
 }
